Proper fix for overlay region not showing properly

--- a/assets/css/app/overlay.less
+++ b/assets/css/app/overlay.less
@@ -12,6 +12,9 @@
 
 	&.no-header {
 		padding-top: @overlay-inner-padding;
+		.overlay-header {
+			display: none;
+		}
 	}
 
 	> .overlay-header {
